# google-genai

./: CHANGELOG.md  Cargo.toml  README.md
examples/: req.rs  strm.rs
src/: datatypes.rs  error.rs  lib.rs
