[package]
name = "google-genai"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["client", "http1", "http2", "tracing"] }
hyper-util = "0.1.10"
serde = { version = "1.0.216", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.133"
serde_with = "3.11.0"
thiserror = "2.0.8"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.42.0", features = ["full"] }
