[package]
name = "google-genai"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_setters = "0.1.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.133"
serde_with = "3.11.0"
thiserror = "2.0.8"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.42.0", features = ["full"] }
