[package]
name = "google-genai"
version = "0.0.1"
edition = "2021"
authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "Bindigns for the Google AI Platform API"
keywords = ["google", "genai", "gemini", "llm"]
license = "MIT"
readme = "README.md"

[dependencies]
derive_setters = "0.1.6"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.133"
serde_with = "3.11.0"
thiserror = "2.0.8"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.42.0", features = ["full"] }
